<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="action_settings">Settings</string>
 <string name="app_name">Tokyo mobile client</string>
 <string name="bluetooth_label">BluetoothProximitySensorState</string>
 <string name="bluetooth_set_successful">Successfully set bluetooth address</string>
 <string name="bluetooth_set_unsuccessful">Failed to set bluetooth address</string>
 <string name="cancel_button">Cancel</string>
 <string name="logged_out">logged out successfully</string>
 <string name="login_button">login</string>
 <string name="login_failed">Failed to login</string>
 <string name="login_invalid_credentials">Please fill in an username and a password</string>
 <string name="login_successful">Logged in successfully</string>
 <string name="logout_button">logout</string>
 <string name="motion_label">MotionSensorState</string>
 <string name="ok_button">Ok</string>
 <string name="password_label">password</string>
 <string name="set_bluetooth_button">set Bluetooth address</string>
 <string name="set_bluetooth_input_text">Enter the remote Bluetooth address</string>
 <string name="set_wifi_button">set WiFi networks</string>
 <string name="set_wifi_input_text">Enter the desired WiFi network BSSID. Use a space between each BSSID in order to enter multiple</string>
 <string name="state_available">available</string>
 <string name="state_unavailable">unavailable</string>
 <string name="state_unknown">unknown</string>
 <string name="username_label">username</string>
 <string name="wifi_label">WiFiProximitySensorState</string>
 <string name="wifi_set_successful">Successfully set WiFi BSSIDs</string>
 <string name="wifi_set_unsuccessful">Failed to set WiFi BSSIDs</string>
</resources>
