<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AndroidGuiActivity" >

                <TextView
        android:id="@+id/bluetooth_label"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_label" />
    
        <TextView
        android:id="@+id/bluetooth_state"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/state_unknown" />
    
    <TextView
        android:id="@+id/motion_label"
        android:layout_margin="8dp"
        android:layout_below="@+id/bluetooth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_label" />
    
        <TextView
        android:id="@+id/motion_state"
        android:layout_margin="8dp"
        android:layout_below="@+id/bluetooth_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/state_unknown" />
        
            <TextView
        android:id="@+id/wifi_label"
        android:layout_margin="8dp"
        android:layout_below="@+id/motion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_label" />
    
        <TextView
        android:id="@+id/wifi_state"
        android:layout_margin="8dp"
        android:layout_below="@+id/motion_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/state_unknown" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/wifi_label"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textNoSuggestions" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/username_field"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
         	android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         	android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_button"
            android:text="@string/logout_button" />

        <Button
            android:id="@+id/set_wifi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/logout_button"
            android:layout_marginTop="23dp"
            android:text="@string/set_wifi_button" />

        <Button
            android:id="@+id/set_bluetooth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/set_wifi_button"
            android:layout_marginTop="11dp"
            android:text="@string/set_bluetooth_button" />

</RelativeLayout>
</ScrollView>